--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@ nav a:hover{color:#CBB677}
 nav a.active::after{
   content:"";
   position:absolute;
-  bottom:0;
-  left:0;
-  width:100%;
-  height:2px;
-  background:#CBB677;
-  border-radius:1px;
+  bottom:0;left:0;
+  width:100%;height:2px;
+  background:#CBB677;border-radius:1px;
 }
 h1{margin:2rem 0 1rem;font-size:2rem;color:#002855}
+h2{margin-top:.5rem;font-size:1.3rem;font-weight:600;color:#002855}
 .section{padding:1rem}
 .disciplines p{margin:.5rem 0;font-weight:600}
-.btn{background:#002855;color:#F8F6EE;border:none;padding:.6rem 1.2rem;margin:.4rem;text-decoration:none;border-radius:3px;display:inline-block}
+.btn{background:#002855;color:#F8F6EE;border:none;
+  padding:.6rem 1.2rem;margin:.4rem;text-decoration:none;
+  border-radius:3px;display:inline-block}
 .btn:hover{background:#CBB677;color:#002855}
-footer{margin-top:2rem;padding:1rem 0;font-size:.9rem;color:#002855;background:#f1eee4}
+footer{margin-top:2rem;padding:1rem 0;font-size:.9rem;
+  color:#002855;background:#f1eee4}
 </style>
 </head>
 <body>
@@ -40,6 +41,7 @@ footer{margin-top:2rem;padding:1rem 0;font-size:.9rem;color:#002855;background:#
 </nav>
 
 <h1>Seguin Texas</h1>
+<h2>Instructor: <a href="about.html" style="color:#002855;text-decoration:underline;">Duece King</a></h2>
 
 <section class="section">
   <div class="disciplines">
@@ -50,19 +52,13 @@ footer{margin-top:2rem;padding:1rem 0;font-size:.9rem;color:#002855;background:#
   </div>
 </section>
 
-<section class="section">
-  <h2>Pricing & Packages</h2>
-  <p>• 1.5 hr private — <strong>$50</strong></p>
-  <p>• Twelve 1.5 hr privates a month (3/wk) — <strong>$150</strong></p>
-  <p>Team Sparring (free to team) every Sat @ 2 pm</p>
-  <div>
-    <a href="tel:+18304060763" class="btn">Call Now</a>
-    <a href="sms:+18304060763" class="btn">Text Duece</a>
-    <a href="https://www.facebook.com/share/15tCQeeB5E/?mibextid=wwXIfr" class="btn" target="_blank">Facebook</a>
-  </div>
-</section>
+<div>
+  <a href="tel:+18304060763" class="btn">Call Now</a>
+  <a href="sms:+18304060763" class="btn">Text Duece</a>
+  <a href="https://www.facebook.com/share/15tCQeeB5E/?mibextid=wwXIfr" class="btn" target="_blank">Facebook</a>
+</div>
 
-<footer>© 2025 MMAthematix Fight Laboratory | Designed by Evan Rexus</footer>
+<footer>© 2025 MMAthematix Fight Laboratory | Web Designs by Easy Ian</footer>
 </body>
 </html>
 
