Center slideshow images on About Duece page

--- a/about.html
+++ b/about.html
@@ -55,6 +55,7 @@ nav a.active::after {
   width: 100%;
   height: 100%;
   object-fit: contain;
+  object-position: center center; /* centers the image horizontally & vertically */
   background: #000;
   opacity: 0;
   animation: fade 16s infinite;
