Remove gold border from all pages

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {
 .divider {
   background: #002855;
   height: 60px;
-  border-bottom: 3px solid #CBB677;
+  #border-bottom: 3px solid #CBB677;
 }
 
 /* Hero image */
