--- a/about.html
+++ b/about.html
@@ -24,7 +24,6 @@ body {
   height: 300px;
   overflow: hidden;
   border-bottom: 3px solid #CBB677;
-  background: #000;
 }
 
 @media (min-width: 768px) {
@@ -37,12 +36,12 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: auto;
-  min-width: 100%;
+  width: 100%;
   height: 100%;
   transform: translate(-50%, -50%);
-  object-fit: cover;
-  object-position: center;
+  object-fit: cover;              /* still fills full width */
+  object-position: top center;    /* shifts framing upward */
+  background: #000;
   opacity: 0;
   animation: fade 16s infinite;
 }
@@ -113,11 +112,6 @@ footer {
   <p>Today, Duece offers private instruction and team training focused on building strong fundamentals, conditioning, and discipline — helping students of all levels develop the mindset and skills of a true martial artist.</p>
 
   <p><strong>Private sessions by appointment only.</strong></p>
-
-  <p style="margin-top:1.5rem;text-align:center;">
-    <a href="https://www.facebook.com/media/set/?set=a.1324109699489&type=3&rdid=b6l7TfEKnBCwS0Ai&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F1BerBzXUHC%2F"
-       target="_blank" class="link"><strong>View Duece King’s Career Highlights on Facebook</strong></a>
-  </p>
 
 <p style="margin-top:1.5rem;text-align:center;">
   <a href="https://www.facebook.com/media/set/?set=a.1324109699489&type=3&rdid=tVVggTgijVVvInkT&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F1BerBzXUHC%2F" 
